# tauri-plugin-google-auth

./: .prettierignore  ANDROID_SETUP.md  Cargo.toml  README.md  build.rs  iOS_SETUP.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: build-demo.yml  checks.yml  publish.yml
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/java/: GoogleSignInActivity.kt  GoogleSignInPlugin.kt
examples/google-auth-demo/: package.json  pnpm-lock.yaml
examples/google-auth-demo/src/: App.svelte
examples/google-auth-demo/src-tauri/: Cargo.toml  tauri.conf.json
examples/google-auth-demo/src-tauri/capabilities/: default.json
examples/google-auth-demo/src-tauri/src/: lib.rs  main.rs
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: GoogleSignInPlugin.swift
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
