[package]
name = "tauri-plugin-google-auth"
version = "0.1.1"
authors = [ "You" ]
description = "A Tauri v2 plugin that enables Google OAuth authentication"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-google-auth"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Choochmeque/tauri-plugin-google-auth"

[dependencies]
tauri = { version = "2.8.2" }
serde = "1.0"
serde_json = "1"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
