[package]
name = "tauri-plugin-google-auth"
version = "0.2.0"
authors = [ "You" ]
description = "A Tauri v2 plugin that enables Google OAuth authentication"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-google-auth"
license = "MIT"
repository = "https://github.com/Choochmeque/tauri-plugin-google-auth"

[dependencies]
tauri = { version = "2.8.2" }
serde = "1.0"
serde_json = "1"
thiserror = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
oauth2 = { version = "5", features = ["reqwest-blocking"] }
url = "2.5"
open = "5"
uuid = { version = "1.10", features = ["v7"] }

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
